# skill_chekc2_check_by_schema

./: Cargo.toml  README.md
src/: check_type.rs  main.rs  schema_loader.rs  schema_parser.rs  type_checker.rs
tests/: integration_test.rs
tests/data/conf/: ignore_failure_invalid_retry.conf  invalid_retry.conf  sample3.conf
tests/data/schma/: partial.schema  sample.schema
